Fix overlapped equations and floating images

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@
 }
 
 .math-display {
-  @apply max-w-0;
+  @apply max-w-0 clear-both;
 }
 
 .col-list {
